--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1,4 +1,41 @@
 {
-  "errorBoundary.text": "Uups da ist etwas schief gelaufen... wir arbeiten daran 👷‍♂️⛑️",
-  "errorBoundary.refresh": "Seite neu laden"
+  "navigation.events.title": "Event-Menü",
+  "navigation.drone.title": "Kameramodi",
+  "navigation.cameraViews.title": "Kameraperspektiven",
+  "navigation.geometriesCut.title": "Geometrieschnitt-Optionen",
+  "navigation.transparent.title": "Geometrietransparenz anpassen",
+  "navigation.wireframe.title": "Geometrie-Drahtgitter umschalten",
+  "navigation.stats.title": "Anwendungsleistungsstatistiken",
+  "navigation.axis.title": "Achsendarstellung umschalten",
+  "navigation.ground.title": "Bodenanzeige umschalten",
+  "navigation.camera.title": "Zwischen 2D- und 3D-Perspektiven wechseln",
+  "navigation.theme.title": "Zwischen Hell- und Dunkelmodus wechseln",
+  "navigation.fullscreen.title": "Vollbildmodus",
+  "navigation.about.title": "Über uns",
+  "modal.events.title": "Veranstaltungen",
+  "modal.events.groupName": "Gruppe",
+  "modal.events.tracks": "Spuren",
+  "modal.events.jets": "Jets",
+  "modal.events.met": "MET",
+  "modal.events.cells": "Zellen",
+  "modal.events.clusters": "Cluster",
+  "modal.events.hits": "Hits",
+  "modal.events.filter": "Filter",
+  "modal.events.algorithms": "Algorithmen",
+  "modal.events.info": "Informationen",
+  "modal.events.info.name": "Ereignis",
+  "modal.events.info.number": "Ereignis-ID",
+  "modal.events.info.lumiB": "LumiB",
+  "modal.events.info.runN": "Laufnummer",
+  "modal.events.info.date": "Datum",
+  "modal.events.algorithms.tracks": "Spuren",
+  "modal.events.algorithms.clusters": "Cluster",
+  "modal.events.algorithms.jets": "Jets",
+  "modal.events.filter.track": "Spurwert",
+  "modal.events.filter.jet": "Jetwert",
+  "modal.events.filter.showOnly": "Nur anzeigen",
+  "modal.events.filter.muons": "Myonen",
+  "modal.events.filter.electrons": "Elektronen",
+  "errorBoundary.text": "Ups! Etwas ist schief gelaufen. Wir arbeiten daran, es zu beheben. 👷‍♂️⛑️",
+  "errorBoundary.refresh": "Seite aktualisieren"
 }
